# django-rest-framework-protobuf

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg  tasks.py
.github/: dependabot.yml
.github/workflows/: ci.yml
rest_framework_protobuf/: parsers.py  renderers.py
tests/: test_django_rest_framework_protobuf.py  test_parsers.py  test_render_and_parse.py  test_renderers.py
tests/djangoproject/: testsettings.py
